// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateProjectDialog renders request form only if requestOnly is set 1`] = `
<div
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullWidth MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root"
  >
    <h2
      class="MuiTypography-root MuiTypography-h6"
    >
      Request New Project
    </h2>
  </div>
  <div
    class="MuiDialogContent-root"
  >
    <div>
      CreateProjectForm mock 
      {"requestOnly":true}
    </div>
  </div>
</div>
`;

exports[`CreateProjectDialog renders to match snapshot passing function props to form 1`] = `
<div
  class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullWidth MuiPaper-elevation24 MuiPaper-rounded"
  role="dialog"
>
  <div
    class="MuiDialogTitle-root"
  >
    <h2
      class="MuiTypography-root MuiTypography-h6"
    >
      Create New Project
    </h2>
  </div>
  <div
    class="MuiDialogContent-root"
  >
    <div>
      CreateProjectForm mock 
      {}
    </div>
  </div>
</div>
`;
